# wasm-gpx-geotagger

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.md  README.md
.github/workflows/: deploy.yml
assets/styling/: main.css
src/: main.rs
src/components/: hero.rs  mod.rs  sample_map.rs
src/tagging/: exif_tagger.rs  gpx_reader.rs  mod.rs
