[package]
name = "geotagger"
version = "0.1.0"
authors = ["jnomikos <john.nomikos55@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
gpx = "0.10.0"
img-parts = "0.4.0"
little_exif = "0.6.23"
bytes = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob", "BlobPropertyBag", "Url",
    "HtmlAnchorElement", "Document", "Element", "HtmlElement",
    "FileSystemDirectoryHandle", "FileSystemFileHandle",
    "FileSystemWritableFileStream", "FileSystemGetFileOptions",
    "Window", "Performance",
] }
dioxus-leaflet = "0.3.1"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
